test/fails/bad_functions/bad_if1.lgl
void main() {
    else {
        print 3.;
    }
}